--- a/src/app/component/menu-bar/menu-bar.component.html
+++ b/src/app/component/menu-bar/menu-bar.component.html
@@ -1,1 +1,10 @@
-<p>menu-bar works!</p>
+<div class="container-menu-bar">
+    <ul>
+        <li><a href="">OPTION A</a></li>
+            <li><span>•</span></li>
+        <li><a href="">OPTION B</a></li>
+            <li><span>•</span></li>
+        <li><a href="">OPTION C</a></li>
+    </ul>
+
+</div>
