--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,3 +1,6 @@
+<header>
+    <app-menu-bar></app-menu-bar>
+</header>
 <app-menu-title></app-menu-title>
 <div class="articles">
     <div class="articles-main">
@@ -7,7 +10,8 @@
     <div class="articles-side">
         <app-small-card></app-small-card>
         <app-small-card></app-small-card>
-
+        <app-small-card></app-small-card>
+        <app-small-card></app-small-card>
 
     </div>
 
