--- a/src/app/component/menu-title/menu-title.component.css
+++ b/src/app/component/menu-title/menu-title.component.css
@@ -15,3 +15,9 @@
     margin-top: 20px;
     margin-bottom: 20px;
 }
+
+@media screen and (max-width: 600px) {
+    .container-menu-title > h1{
+        font-size: 10px;
+    }
+}
