param small-card

--- a/src/app/component/small-card/small-card.component.html
+++ b/src/app/component/small-card/small-card.component.html
@@ -1,16 +1,15 @@
 <div class="container-small-card">
     <div class="small-card-picture">
-        <img src="https://img.freepik.com/fotos-gratis/lagarto-animal-na-natureza-multicolorido-e-ia-generativa-proxima_188544-9072.jpg"
-            alt="" />
+        <img src= {{photoCover}} alt="" />
 
     </div>
     <div class="small-card-title">
-        <h1><a href="#">Nova versão do Angular</a></h1>
+        <h1><a href="#">{{cardTitle}}</a></h1>
     </div>
 
-   
-       
 
- 
+
+
+
 </div>
-<hr/>
+<hr />
