--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -4,15 +4,26 @@
 <app-menu-title></app-menu-title>
 <div class="articles">
     <div class="articles-main">
-        <app-big-card></app-big-card>
+        <app-big-card
+            photoCover="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3f/Placeholder_view_vector.svg/800px-Placeholder_view_vector.svg.png"
+            cardTitle="Novo Angular"
+            cardDescription="Lorem, ipsum dolor sit amet consectetur adipisicing elit. Totam, quidem? Exercitationem, aspernatur. Vel esse nam voluptatem repellendus, impedit dignissimos cumque, a placeat tenetur repudiandae maxime inventore. Perferendis nobis consequatur velit!">
+        </app-big-card>
     </div>
 
     <div class="articles-side">
-        <app-small-card></app-small-card>
-        <app-small-card></app-small-card>
-        <app-small-card></app-small-card>
-        <app-small-card></app-small-card>
-
+        <app-small-card
+            photoCover="https://img.freepik.com/fotos-gratis/lagarto-animal-na-natureza-multicolorido-e-ia-generativa-proxima_188544-9072.jpg"
+            cardTitle="Novo Angular">
+        </app-small-card>
+        <app-small-card
+            photoCover="https://img.freepik.com/fotos-gratis/lagarto-animal-na-natureza-multicolorido-e-ia-generativa-proxima_188544-9072.jpg"
+            cardTitle="Novo Angular">
+        </app-small-card>
+        <app-small-card
+            photoCover="https://img.freepik.com/fotos-gratis/lagarto-animal-na-natureza-multicolorido-e-ia-generativa-proxima_188544-9072.jpg"
+            cardTitle="Novo Angular">
+        </app-small-card>
     </div>
 
 
